move logo to banner

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 
 	<div class="container">
 		<div class="jumbotron">
-			<h1>Course Catalog</h1> 
+			<h1><%= image_tag("logo.png", :alt => "img missing", :size => "150") %> Course Catalog</h1>
 
 		</div>
 	</div>
