--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,2 @@
-<%= image_tag("logo.png", :alt => "img missing", :size => "260*260") %>
+<%= image_tag("logo.png", :alt => "img missing", :size => "100") %>
 <!-- <img class="img-responsive" src="/Users/Andrea/Desktop/Brandeis_logo.png" alt="img missing"> -->
