--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,10 @@
 			<li><%= link_to "Instructors", 'instructors' %></li>
 			<li><%= link_to "Subjects", 'subjects' %></li>
 			<li><%= link_to "Courses", 'courses' %></li>
+
+			<li><%= link_to "Users", 'users' %></li>
+
+			<li><%= link_to "Registrations", 'registrations' %></li>
 		</ul>
 	</div>
 
