--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,6 +1,10 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Courses</h1>
+</br>
+<%= page_entries_info @courses %> </br>
+<%= will_paginate @courses, :container => false %> </br>
+</br>
 
 <table class = "table table-bordered table-striped">
   <thead>
@@ -9,7 +13,7 @@
       <th>Code</th>
       <th>Name</th>
       <th>Description</th>      
-      <th colspan="3"></th>
+      <!-- <th colspan="3"></th> -->
     </tr>
   </thead>
 
@@ -21,14 +25,17 @@
         <td><%= course.name %></td>
         <td><%= course.description %></td>
         
-        <td><%= link_to 'Show', course %></td>
+        <!-- <td><%= link_to 'Show', course %></td>
         <td><%= link_to 'Edit', edit_course_path(course) %></td>
-        <td><%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
       </tr>
     <% end %>
+
   </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Course', new_course_path %>
+
+
+<button type="button" class="btn btn-default"><%= link_to 'New Course', new_course_path %></button>
