--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,3 +8,9 @@
 	<% end %> 
 <% end %>
  -->
+
+
+<div class="photo-row">
+	</br>
+	<center><%= image_tag("castle.png", :alt => "img missing", :size => "800x500") %></center>
+</div>
