added sign up page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,5 +12,8 @@
 
 <div class="photo-row">
 	</br>
+	<center><%= link_to "Sign in", signup_path, class: "btn btn-default" %>
+			<%= link_to "Sign up now!", signup_path, class: "btn btn-default" %></center>
+	</br>
 	<center><%= image_tag("castle.png", :alt => "img missing", :size => "800x500") %></center>
 </div>
