--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -12,7 +12,8 @@
       <th>ID</th>
       <th>Code</th>
       <th>Name</th>
-      <th>Description</th>      
+      <th>Description</th>  
+      <th></th>    
       <!-- <th colspan="3"></th> -->
     </tr>
   </thead>
@@ -20,10 +21,12 @@
   <tbody>
     <% @courses.each do |course| %>
       <tr>
-        <td><%= course.id %></td>
+        <td><%= @a = course.id %></td>
         <td><%= course.code %></td>
         <td><%= course.name %></td>
         <td><%= course.description %></td>
+        <td><button  class="btn btn-link", action = "courses/enroll">Enroll</button></td>
+        <!-- <%= link_to 'Back', users_path %> -->
         
         <!-- <td><%= link_to 'Show', course %></td>
         <td><%= link_to 'Edit', edit_course_path(course) %></td>
