--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,10 +10,34 @@
  -->
 
 
-<div class="photo-row">
-	</br>
-	<center><%= link_to "Sign in", signup_path, class: "btn btn-default" %>
-			<%= link_to "Sign up now!", signup_path, class: "btn btn-default" %></center>
-	</br>
-	<center><%= image_tag("castle.png", :alt => "img missing", :size => "800x500") %></center>
+<div class="row">
+	<div class="link container">
+		</br>
+		<blockquote>
+		    <p>The best preparation for tomorrow is doing your best today.</p>
+		    <footer>H. Jackson Brown, Jr.</footer>
+		</blockquote>
+
+		<h3>Links:</h3>
+		<p class="text-muted"><strong>Link to private GitHub repo:</strong> <a href="https://github.com/ziyuqiu/Rails">https://github.com/ziyuqiu/Rails</a></br></p>
+		<p class="text-primary"><strong>Link to Heroku:</strong> <a href="https://course-catalog-ziyuqiu.herokuapp.com/">https://course-catalog-ziyuqiu.herokuapp.com/</a></br></p>
+
+		<h3>For PA Rails1:</h3>
+		<p class="text-success"><strong>Home page:</strong><a href="https://course-catalog-ziyuqiu.herokuapp.com/">https://course-catalog-ziyuqiu.herokuapp.com/</a></br>(Please disregard the signin button since it is not actually doing anything)</p>
+			
+		<p class="text-info"><strong>Table of Instructors: </strong> <a href="https://course-catalog-ziyuqiu.herokuapp.com/instructors">https://course-catalog-ziyuqiu.herokuapp.com/instructors</a></br></p>
+		<p class="text-warning"><strong>Table of Subjects: </strong> <a href="https://course-catalog-ziyuqiu.herokuapp.com/subjects">https://course-catalog-ziyuqiu.herokuapp.com/subjects</a></br></p>
+		<p class="text-danger"><strong>Table of Courses: </strong> <a href="https://course-catalog-ziyuqiu.herokuapp.com/courses">https://course-catalog-ziyuqiu.herokuapp.com/courses</a></br></p>
+
+		<h3>For PA Rails2:</h3>
+		<p class="text-success"><strong>Registration List: </strong> <a href="https://course-catalog-ziyuqiu.herokuapp.com/users">https://course-catalog-ziyuqiu.herokuapp.com/users</a></br></p>
+
+
+	</div>
+	<div class="col-md-12">
+		</br>
+		<center><%= link_to "Sign in", login_path, class: "btn btn-default" %></center>
+		</br>
+		<center><%= image_tag("castle.png", :alt => "img missing", :size => "600x400", :crop => :fit) %></center>
+	</div>
 </div>
