--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,24 @@
 			<li><%= link_to "Courses", 'courses' %></li>
 			<li><%= link_to "Registrations", 'users' %></li>
 <!--		<li><%= link_to "Registrations", 'registrations' %></li> -->
+			
+			<% if logged_in? %>
+	          <li class="dropdown" align = "right">
+	            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+	              Account <b class="caret"></b>
+	            </a>
+	            <ul class="dropdown-menu">
+	              <li><%= link_to "Profile", current_user %></li>
+	              <!-- <li><%= link_to "Settings", '#' %></li> -->
+	              <li class="divider"></li>
+	              <li>
+	                <%= link_to "Log out", logout_path, method: :delete %>
+	              </li>
+	            </ul>
+	          </li>
+	        <% else %>
+	          <li><%= link_to "Log in", login_path %></li>
+	        <% end %>
 		</ul>
 	</div>
 
@@ -52,6 +70,7 @@
   </body>
 
   <footer class="footer">
+  	  <hr>
 	  <small>
 	    This is a footer.
 	  </small>
