--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,25 +2,30 @@
 
 <h1>Sign up</h1>
 
-<form class="form-inline">
-	<div class="form-group">
-    <label for="email">Name:</label>
-    <input type="email" class="form-control" id="name">
-  </div></br>
-  <div class="form-group">
-    <label for="email">Email address:</label>
-    <input type="email" class="form-control" id="email">
-  </div></br>
-  <div class="form-group">
-    <label for="pwd">Password:</label>
-    <input type="password" class="form-control" id="pwd">
-  </div></br>
-  <div class="checkbox">
-    <label><input type="checkbox"> Remember me</label>
-  </div></br>
-  <button type="submit" class="btn btn-default">Submit</button></br>
-  <button type="submit" class="btn btn-link"><%= link_to 'Back', users_path %></button>
-</form>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for(@user) do |f| %>
+      <%= render 'shared/error_messages' %>
+
+      <%= f.label :name %>
+      <%= f.text_field :name, class: 'form-control' %>
+
+      <%= f.label :email %>
+      <%= f.email_field :email, class: 'form-control' %>
+
+      <%= f.label :password %>
+      <%= f.password_field :password, class: 'form-control' %>
+
+      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.password_field :password_confirmation, class: 'form-control' %>
+      </br>
+      </br>
+      <%= f.submit "Create my account", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
+<button type="submit" class="btn btn-link"><%= link_to 'Back', users_path %></button>
+
 
 <!--<%= render 'form', user: @user %>-->
 
