--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,16 @@
+<% provide(:title, @user.name) %>
+<div class="row">
+  <aside class="col-md-4">
+    <section class="user_info">
+      <h1>
+      	<%= gravatar_for @user %>
+        <%= @user.name %>
+      </h1>
+    </section>
+  </aside>
+</div>
+
+
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -8,6 +21,15 @@
 <p>
   <strong>Email:</strong>
   <%= @user.email %>
+</p>
+
+<p>
+  <strong>Enrolled:</strong>
+  <% @user.registrations.each do |r| %>
+          <%= Course.find(r.course_id).code  %>
+          <%= Course.find(r.course_id).name  %>
+          </br>
+   <% end %>
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
