--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -6,11 +6,6 @@
 </p>
 
 <p>
-  <strong>Requirements:</strong>
-  <%= @course.requirements %>
-</p>
-
-<p>
   <strong>Description:</strong>
   <%= @course.description %>
 </p>
@@ -19,6 +14,13 @@
   <strong>Code:</strong>
   <%= @course.code %>
 </p>
+
+<strong><h3>Enrolled Students (<%= @course.registrations.count %>)</h3></strong>
+  <ul>
+  <% @course.registrations.each do |r| %>
+    <li><%= User.find(r.user_id).name  %></li></br>
+  <% end %>
+  </ul>
 
 <%= link_to 'Edit', edit_course_path(@course) %> |
 <%= link_to 'Back', courses_path %>
