--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,10 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Subjects</h1>
+
 </br>
-<%= page_entries_info @subjectsub %> </br>
-<%= will_paginate @subjects, :container => false %> </br>
-</br>
+<div class = "col-md-4">
+  <p class="text-primary"><%= page_entries_info @subjectsub %></p>
+  <%= will_paginate @subjects %>
+</div>
+
 <table class = "table">
   <thead>
     <tr>
@@ -28,6 +31,7 @@
     <% end %>
   </tbody>
 </table>
+<%= will_paginate %>
 
 <br>
 
