--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,38 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>CourseCatalogs</title>
-		<!-- for nav bar -->
-<!-- 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	 -->	
-
-
-    <%= csrf_meta_tags %>
-    <!-- for footer -->
-    <%= stylesheet_link_tag    'application', media: 'all','data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <!-- footer finished -->
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-
-	<div class="container">
-		<div class="jumbotron">
-			<h1><%= image_tag("logo.png", :alt => "img missing", :size => "150") %> Course Catalog</h1>
-			</br>
-			<div class="progress">
-			  <div class="progress-bar progress-bar-striped active" role="progressbar"
-			  aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
-			    Website under construction...        (40%)
-			  </div>
-			</div>
-		</div>
-	</div>
-
+<!--   <head>
 	<div class="container">
 		<ul class="nav nav-tabs">
 			<li class="active"><a href="/">Home</a></li>
@@ -40,33 +8,38 @@
 			<li><%= link_to "Subjects", 'subjects' %></li>
 			<li><%= link_to "Courses", 'courses' %></li>
 			<li><%= link_to "Registrations", 'users' %></li>
-<!--		<li><%= link_to "Registrations", 'registrations' %></li> -->
-			
-			<% if logged_in? %>
-	          <li class="dropdown" align = "right">
-	            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-	              Account <b class="caret"></b>
-	            </a>
-	            <ul class="dropdown-menu">
-	              <li><%= link_to "Profile", current_user %></li>
-	              <!-- <li><%= link_to "Settings", '#' %></li> -->
-	              <li class="divider"></li>
-	              <li>
-	                <%= link_to "Log out", logout_path, method: :delete %>
-	              </li>
-	            </ul>
-	          </li>
-	        <% else %>
-	          <li><%= link_to "Log in", login_path %></li>
-	        <% end %>
 		</ul>
 	</div>
-
-  </head>
+  </head> -->
 
   <body> 
-
+  	<%= render 'layouts/header' %>
+  	</br></br>
+  	<div class="container">
+		<div class="jumbotron">
+			<h1><%= image_tag("logo.png", :alt => "img missing", :size => "150") %> Course Catalog</h1>
+			</br>
+			<div class="progress">
+			  <div class="progress-bar progress-bar-striped active" role="progressbar"
+			  aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:60%">
+			    Website under construction...        (60%)
+			  </div>
+			</div>
+			<ul>
+				To Do List:
+				<li>重复url</li>
+				<li>redirect to show course results</li>
+				<li>only insert unique registration</li>
+			</ul>
+		</div>
+	</div>
+  	<div class="container">
+      <% flash.each do |message_type, message| %>
+        <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+      <% end %>
       <%= yield %>
+<!--       <%= debug(params) if Rails.env.development? %>
+ -->    </div>
   </body>
 
   <footer class="footer">
