--- a/app/views/registrations/index.html.erb
+++ b/app/views/registrations/index.html.erb
@@ -1,22 +1,24 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Registrations</h1>
+<h1>Registrations (<%=Registration.count%> registrations)</h1>
 
 <table>
+  <%= will_paginate @registrations %> 
   <thead>
     <tr>
-      <th>User</th>
-      <th>Course</th>
-      <th colspan="3"></th>
+      <th >ID</th>
+      <th >User</th>
+      <th >Course</th>
+      <th colspan="10"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @registrations.each do |registration| %>
       <tr>
-
-        <td><%= registration.user_id %></td>
-        <td><%= registration.course_id %></td>
+        <td ><%= registration.id %></td>
+        <td ><%= link_to registration.user_id, User.find(registration.user_id)%></td>
+        <td ><%= link_to registration.course_id, Course.find(registration.course_id)%></td>
         <td><%= link_to 'Show', registration %></td>
         <td><%= link_to 'Edit', edit_registration_path(registration) %></td>
         <td><%= link_to 'Destroy', registration, method: :delete, data: { confirm: 'Are you sure?' } %></td>
