--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,36 +1,39 @@
+
 <% provide(:title, @user.name) %>
+
+<%= link_to 'Back', users_path %>
+
+
 <div class="row">
-  <aside class="col-md-4">
+  <aside class="col-md-8">
     <section class="user_info">
-      <h1>
-      	<%= gravatar_for @user %>
-        <%= @user.name %>
-      </h1>
+      <div class = "col-md-2">
+        <img class="img-circle" alt="Cinque Terre" size="150" <%= gravatar_for @user %>
+      </div>
+      <div class = "col-md-6">
+        <h1>
+          <strong><%= @user.name %></strong>
+          <p><%= @user.email %></p>
+          <p><%= link_to 'Edit', edit_user_path(@user) %> |
+          <%= link_to 'Delete', @user, method: :delete, data: { confirm: "You sure?" } %></p>
+        </h1>
+      </div>
     </section>
   </aside>
 </div>
 
 
 <p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @user.name %>
-</p>
-
-<p>
-  <strong>Email:</strong>
-  <%= @user.email %>
-</p>
-
-<p>
-  <strong>Enrolled:</strong>
+  <strong><h3>Enrolled Courses (<%= @user.registrations.count %>)</h3></strong>
+  <ul>
   <% @user.registrations.each do |r| %>
-          <%= Course.find(r.course_id).code  %>
-          <%= Course.find(r.course_id).name  %>
-          </br>
-   <% end %>
-</p>
+    <li><%= Course.find(r.course_id).code  %> | 
+        <%= Course.find(r.course_id).name  %></li></br>
+  <% end %>
+  </ul>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+
+
+
+
+
