--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,10 +12,10 @@
       </div>
       <ul class="nav navbar-nav">
         <li class="active"><a href="/">Home</a></li>
-        <li><%= link_to "Instructors", 'instructors' %></li>
-        <li><%= link_to "Subjects", 'subjects' %></li>
-        <li><%= link_to "Courses", 'courses' %></li>
-        <li><%= link_to "Users", 'users' %></li>
+        <li><%= link_to "Instructors", instructors_url %></li>
+        <li><%= link_to "Subjects", subjects_url %></li>
+        <li><%= link_to "Courses", courses_url %></li>
+        <li><%= link_to "Users", users_url %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <form class="navbar-form navbar-left">
