--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,8 +26,6 @@
 			  </div>
 			</div>
 			<ul>
-				To Do List:
-				<li>重复url</li>
 				<li>redirect to show course results</li>
 				<li>only insert unique registration</li>
 			</ul>
@@ -38,8 +36,7 @@
         <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
       <% end %>
       <%= yield %>
-<!--       <%= debug(params) if Rails.env.development? %>
- -->    </div>
+    </div>
   </body>
 
   <footer class="footer">
