--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,36 +1,42 @@
 
 <% provide(:title, @user.name) %>
-
-<%= link_to 'Back', users_path %>
-
-
 <div class="row">
-  <aside class="col-md-8">
+  <button type="button" class="btn btn-default"><%= link_to 'Back', users_path %></button>
+  </br>
+</div>
+
+</br></br>
+<div class="row">
+  
+  <div class="col-md-4">
     <section class="user_info">
-      <div class = "col-md-2">
+      <div class = "col-md-4">
         <img class="img-circle" alt="Cinque Terre" size="150" <%= gravatar_for @user %>
       </div>
-      <div class = "col-md-6">
-        <h1>
+      <div class = "col-md-8">
+        <h4>
           <strong><%= @user.name %></strong>
           <p><%= @user.email %></p>
           <p><%= link_to 'Edit', edit_user_path(@user) %> |
           <%= link_to 'Delete', @user, method: :delete, data: { confirm: "You sure?" } %></p>
-        </h1>
+        </h4>
       </div>
     </section>
-  </aside>
+  </div>
+  <div class="col-md-8">
+    <strong><h3>Enrolled Courses <span class="badge"><%= @user.registrations.count %></span></h3></strong>
+    <ul>
+    <% @user.registrations.each do |r| %>
+      <li><%= Course.find(r.course_id).code  %> | 
+          <%= Course.find(r.course_id).name  %></li>
+    <% end %>
+    </ul>
+  </div>
 </div>
 
 
 <p id="notice"><%= notice %></p>
-  <strong><h3>Enrolled Courses (<%= @user.registrations.count %>)</h3></strong>
-  <ul>
-  <% @user.registrations.each do |r| %>
-    <li><%= Course.find(r.course_id).code  %> | 
-        <%= Course.find(r.course_id).name  %></li></br>
-  <% end %>
-  </ul>
+  
 
 
 
