--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,16 +1,9 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Courses</h1>
+<h4>There are <mark><%= @courses.count %></mark> courses in total. </h4>
 
-
-<% if @courses.blank? %>
-  <h4>There are no courses containing the term <mark><%= params[:search] %></mark>.</h4>
-<% elsif !params[:search].blank? %>
-  <h4>There are <mark><%= @courses.count %> results that matches <mark><%= params[:search].upcase %></mark>.</h4>
-<% else %>
-  <h4>There are <mark><%= @courses.count %></mark> courses in total. </h4>
-<% end %>
-
+<%= will_paginate @courses %> 
 <table class = "table table-bordered table-striped">
   <thead>
     <tr>
