--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -2,22 +2,14 @@
 
 <h1>Search</h1>
 <div class="row">
-  <form class="navbar-form navbar-left">
-    <div class="input-group">
-      <form action="/search" accept-charset="UTF-8" method="get">
-        <div class="col-md-8">
-          <input name="utf8" type="hidden" value="&#x2713;" />
-          <input type="text" class="form-control" placeholder="Search" name="search" id="search" />
-        </div>
-        <div class="col-md-4">
-          <button class="btn btn-default" type="submit" />
-            <i class="glyphicon glyphicon-search"></i>
-          </button>
-        </div>
-      </form>
-    </div>
-  </form>
+  <div class="input-group">
+    <%= form_tag(search_path, method: :get, :authenticity_token => false, id: "search-form") do %>
+      <%= text_field_tag :search, params[:search], placeholder: "Search" %>
+      <%= submit_tag "Search"%>
+    <% end %>
+  </div>
 </div>
+
 </br>
 <div class="row">
   <% if @courses.blank? %>
