--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,48 +1,47 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Search</h1>
-<div class="row">
+
   <div class="input-group">
-    <%= form_tag(search_path, method: :get, :authenticity_token => false, id: "search-form") do %>
-      <%= text_field_tag :search, params[:search], placeholder: "Search" %>
+    <%= form_tag(search_path, method: :post, id: "search-form", remote: true) do %>
+      <%= text_field_tag :phrase, params[:phrase], placeholder: "Search", id:"phrase" %>
       <%= submit_tag "Search"%>
     <% end %>
   </div>
-</div>
+
 
 </br>
-<div class="row">
-  <% if @courses.blank? %>
-    <h4>There are no courses containing the term <mark><%= params[:search] %></mark>.</h4>
-  <% elsif !params[:search].blank? %>
-    <h4>There are <mark><%= @courses.count %> results that matches <mark><%= params[:search].upcase %></mark>.</h4>
-  <% else %>
-    <h4>There are <mark><%= @courses.count %></mark> courses in total. </h4>
-  <% end %>
 
-  <%= will_paginate @courses %> 
-  <table class = "table table-bordered table-striped", remote:ture>
-    <thead>
-      <tr>
-        <th>ID</th>
-        <th>Code</th>
-        <th>Name</th>
-        <th>Description</th>  
-        <% if !current_user.nil? %>
-          <th></th>
-        <% end %>    
-        <!-- <th colspan="3"></th> -->
-      </tr>
-    </thead>
-
-    <tbody>
-      <%= render "index" %>
-    </tbody>
-  </table>
-
+  <div id= "display">
+    <%= render "result"%>
+  </div>
+  
   </br>
-</div>
+
 
 
 
 <button type="button" class="btn btn-default"><%= link_to 'New Course', new_course_path %></button>
+
+<script>
+  $('#phrase').on('keyup', ajaxSubmitSearchForm);
+  $('#search-form').on('submit', function(e) {
+    e.preventDefault();
+    ajaxSubmitSearchForm();
+  })    
+  function ajaxSubmitSearchForm(){
+    $.ajax({
+      url: $('#search-form').attr('action'),
+      type: 'POST',
+      dataType: "json",
+      data: $('#search-form').serialize(),
+      success: function (data) {
+
+        $('#display').html(data.content);
+      },
+      complete: function (data) {
+        console.log(data)
+      }
+    });
+  }
+</script>
