get rid of the submit button

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -5,7 +5,7 @@
   <div class="input-group">
     <%= form_tag(search_path, method: :post, id: "search-form", remote: true) do %>
       <%= text_field_tag :phrase, params[:phrase], placeholder: "Search", id:"phrase" %>
-      <%= submit_tag "Search"%>
+      <!-- <%= submit_tag "Search"%> -->
     <% end %>
   </div>
 
