--- a/app/views/search/_result.html.erb
+++ b/app/views/search/_result.html.erb
@@ -13,6 +13,7 @@
     <thead>
       <tr>
         <th>ID</th>
+        <th>Subject</th>
         <th>Code</th>
         <th>Name</th>
         <th>Description</th>  
@@ -28,6 +29,12 @@
         <tr>
           <% current_course = course.id %>
           <td><%= course.id %></td>
+          <td>
+          <% if course.academics.present? %>
+            <% course.academics.each do |a| %>
+              <%= (Subject.find_by num: a.subject_num).name %></br>
+            <% end %>
+          <% end %></td>
           <td><%= course.code %></td>
           <td><%= course.name %></td>
           <td><%= course.description %></td>
