--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -12,6 +12,7 @@
   <thead>
     <tr>
       <th>ID</th>
+      <th>Subject ID</th>
       <th>Name</th>
       <th>Abbreviation</th>
      <!--  <th colspan="3"></th> -->
@@ -22,6 +23,7 @@
     <% @subjects.each do |subject| %>
       <tr>
         <td><%= subject.id %></td>
+        <td><%= subject.num %></td>
         <td><%= subject.name %></td>
         <td><%= subject.abbreviation %></td>
         <!-- <td><%= link_to 'Show', subject %></td>
