minor layout modification

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -16,7 +16,7 @@
         <% end %>
       </select>
       <%= text_field_tag :phrase, params[:phrase], placeholder: "Search", id:"phrase" %>
-      <%= submit_tag "Search"%>
+      <!-- <%= submit_tag "Search"%> -->
     <% end %>
   </div>
 
