--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,5 @@
 <!DOCTYPE html>
 <html>
-<!--   <head>
-	<div class="container">
-		<ul class="nav nav-tabs">
-			<li class="active"><a href="/">Home</a></li>
-			<li><%= link_to "Instructors", 'instructors' %></li>
-			<li><%= link_to "Subjects", 'subjects' %></li>
-			<li><%= link_to "Courses", 'courses' %></li>
-			<li><%= link_to "Registrations", 'users' %></li>
-		</ul>
-	</div>
-  </head> -->
-
   <body> 
   	<%= render 'layouts/header' %>
   	</br></br>
@@ -21,8 +9,8 @@
 			</br>
 			<div class="progress">
 			  <div class="progress-bar progress-bar-striped active" role="progressbar"
-			  aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:60%">
-			    Website under construction...        (60%)
+			  aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:100%">
+			    Website done!        (100%)
 			  </div>
 			</div>
 		</div>
