--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -47,6 +47,7 @@
 
 	</div>
 	<div class="col-md-12">
-		<center><%= image_tag("castle.png", :alt => "img missing", :size => "600x400", :crop => :fit) %></center>
+		<!-- <center><%= image_tag("castle.png", :alt => "img missing", :size => "600x400", :crop => :fit) %></center> -->
+		<iframe width="1020" height="640" src="https://www.youtube.com/embed/aiiCRA3G5e0?autoplay=1"></iframe>
 	</div>
 </div>
