--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,6 +8,7 @@
   <nav class="navbar navbar-fixed-top navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
+        <a class="navbar-brand" href="/"><%= image_tag("white_logo.png", :alt => "img missing", :size => "35", :id => "logo") %></a>
         <a class="navbar-brand" href="/">Course Catalog</a>
       </div>
       <ul class="nav navbar-nav">
@@ -17,6 +18,7 @@
         <li><%= link_to "Courses", courses_url %></li>
         <li><%= link_to "Users", users_url %></li>
         <li><%= link_to "Search", '/search' %></li>
+        <li><%= link_to "DON'T TRY THIS", '/relax' %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <form class="navbar-form navbar-left" action="/search">
