--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,19 +2,20 @@
 <html>
   <body> 
   	<%= render 'layouts/header' %>
-  	</br></br>
-  	<div class="container">
-		<div class="jumbotron">
-			<h1><%= image_tag("logo.png", :alt => "img missing", :size => "150") %> Course Catalog</h1>
+  	</br>
+  	<!-- <div class="progress">
+	  <div class="progress-bar progress-bar-striped active" role="progressbar"
+	  aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
+	    Website done!        (100%)
+	  </div> -->
+	<!-- </div> -->
+  	<!-- <div class="container">-->
+		<!-- <div class="jumbotron"> -->
+			<!-- <h1><%= image_tag("logo.png", :alt => "img missing", :size => "80") %> Course Catalog</h1> -->
 			</br>
-			<div class="progress">
-			  <div class="progress-bar progress-bar-striped active" role="progressbar"
-			  aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:100%">
-			    Website done!        (100%)
-			  </div>
-			</div>
-		</div>
-	</div>
+			
+		<!-- </div> -->
+	<!--</div> -->
   	<div class="container">
       <% flash.each do |message_type, message| %>
         <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
