fix insecure url

--- a/app/views/pages/kill_time.html.erb
+++ b/app/views/pages/kill_time.html.erb
@@ -1,4 +1,4 @@
 	<h1> Otherwise you won't be able to leave it!</h1>
 	<div class= "banner_box">
-		<iframe width = "1140" height = "640" src="http://www.mta.me/"></iframe>
+		<iframe width = "1140" height = "640" src="//www.mta.me/"></iframe>
 	</div>
