--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,7 +25,7 @@
           <div class="input-group">
             <form action="/search" accept-charset="UTF-8" method="get">
               <input name="utf8" type="hidden" value="&#x2713;" />
-              <input type="text" class="form-control" placeholder="Search" name="search" id="search" />
+              <input type="text" class="form-control" placeholder="Search" name="phrase" id="search" />
               <div class="input-group-btn">
                 <button class="btn btn-default" type="submit" />
                   <i class="glyphicon glyphicon-search"></i>
