--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -31,7 +31,8 @@
 
 <button type="button" class="btn btn-default"><%= link_to 'New Course', new_course_path %></button>
 
-<script>
+<%= javascript_include_tag 'search_ajax' %>
+<!-- <script>
   $('#phrase').on('keyup', ajaxSubmitSearchForm);
   $('#sub-filter').on('change',ajaxSubmitSearchForm);
   $('#search-form').on('submit', function(e) {
@@ -54,4 +55,4 @@
       }
     });
   }
-</script>
+</script> -->
