try fixing http

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
         <li><%= link_to "Courses", courses_url %></li>
         <li><%= link_to "Users", users_url %></li>
         <li><%= link_to "Search", '/search' %></li>
-        <li><%= link_to "DON'T TRY THIS", '/relax' %></li>
+        <li><%= link_to "Relax", '/relax' %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <form class="navbar-form navbar-left" action="/search">
