--- a/app/views/pages/kill_time.html.erb
+++ b/app/views/pages/kill_time.html.erb
@@ -1,4 +1,5 @@
-	<h1> Otherwise you won't be able to leave it!</h1>
-	<div class= "banner_box">
-		<iframe width = "1140" height = "640" src="http://www.mta.me/"></iframe>
-	</div>
+<h1> Otherwise you won't be able to leave it!</h1>
+<p>This is the display of website: <%= link_to 'http://www.mta.me/', '	http://www.mta.me/', class: "btn btn-link" %>
+<div class= "banner_box"></p>
+	<iframe width = "1140" height = "640" src="http://www.mta.me/"></iframe>
+</div>
