--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+    #logo {
+      position: relative; top: -2px;
+    }
+  </style>
+  </head>
   <body> 
   	<%= render 'layouts/header' %>
   	</br>
