--- a/app/views/pages/relax.html.erb
+++ b/app/views/pages/relax.html.erb
@@ -3,5 +3,7 @@
 <p>Unfortunately, I was unable to solve the problem of mix content. Enforcing https didn't work... Trying to find a solution. The website is able to show on localhost though.</p>
 
 <div class= "banner_box">
-	<iframe width = "1140" height = "640" src="https://course-catalog-ziyuqiu.herokuapp.com/relax?url=http://www.mta.me/"></iframe>
+	<iframe width = "1140" height = "640" src="http://www.mta.me/"></iframe>
 </div>
+
+<%= @code %>
