--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -9,8 +9,9 @@
 
   <div class="input-group">
     <%= form_tag(search_path, method: :post, id: "search-form", remote: true) do %>
-      <select id="sub-filter" name="filter">
-        <option value="">----Please Select Subject----</option>
+
+      <select class="selectpicker" title="Please select subject..." data-live-search="true" id="sub-filter" name="filter">
+        <option value="">All Subjects</option>
         <% @subjects.each do |sub| %>
           <option value= <%= sub.num %>> <%= sub.name %></option>
         <% end %>
