modify relax description

--- a/app/views/pages/relax.html.erb
+++ b/app/views/pages/relax.html.erb
@@ -1,6 +1,6 @@
 <h1> Otherwise you won't be able to leave it!</h1>
 <p>This is the display of website: <%= link_to 'http://www.mta.me/', '	http://www.mta.me/', class: "btn btn-link" %></p>
-<p>Unfortunately, I was unable to solve the problem of mix content. Enforcing https didn't work... Trying to find a solution. The website is able to show on localhost though.</p>
+<p>Unfortunately, I was unable to solve the problem of mix content. Please go to <%= link_to 'http://course-catalog-ziyuqiu.herokuapp.com/relax', 'http://course-catalog-ziyuqiu.herokuapp.com/relax', class: "btn btn-link" %> (or simply delete the "s" in your "https" in the url)to enjoy it.</p>
 
 <div class= "banner_box">
 	<iframe width = "1140" height = "640" src="https://www.google.com/search?q=http://www.mta.me/&btnI=Im+Feeling+Lucky"></iframe>
