--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,49 +1,54 @@
 <p id="notice"><%= notice %></p>
+<% if !current_user.nil? %>
+  <h1>Courses</h1>
+  <h4>There are <mark><%= @courses.count %></mark> courses in total. </h4>
 
-<h1>Courses</h1>
-<h4>There are <mark><%= @courses.count %></mark> courses in total. </h4>
-
-<%= will_paginate @courses %> 
-<table class = "table table-bordered table-striped">
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>Subject</th>
-      <th>Code</th>
-      <th>Name</th>
-      <th>Description</th>  
-      <% if !current_user.nil? %>
-        <th></th>
-      <% end %>    
-      <!-- <th colspan="3"></th> -->
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @courses.each do |course| %>
+  <%= will_paginate @courses %> 
+  <table class = "table table-bordered table-striped">
+    <thead>
       <tr>
-        <% current_course = course.id %>
-        <td><%= course.id %></td>
-        <td>
-          <% if course.academics.present? %>
-            <% course.academics.each do |a| %>
-              <%= (Subject.find_by num: a.subject_num).name %></br>
-            <% end %>
-          <% end %></td>
-        <td><%= course.code %></td>
-        <td><%= course.name %></td>
-        <td><%= course.description %></td>
+        <th>ID</th>
+        <th>Subject</th>
+        <th>Code</th>
+        <th>Name</th>
+        <th>Description</th>  
         <% if !current_user.nil? %>
-          <td><%=link_to "Enroll", course_enroll_path(course, user_id: current_user.id), method: :post %></td>
-        <% end %>
+          <th></th>
+        <% end %>    
+        <!-- <th colspan="3"></th> -->
       </tr>
-    <% end %>
+    </thead>
 
-  </tbody>
-</table>
+    <tbody>
+      <% @courses.each do |course| %>
+        <tr>
+          <% current_course = course.id %>
+          <td><%= course.id %></td>
+          <td>
+            <% if course.academics.present? %>
+              <% course.academics.each do |a| %>
+                <%= (Subject.find_by num: a.subject_num).name %></br>
+              <% end %>
+            <% end %></td>
+          <td><%= course.code %></td>
+          <td><%= course.name %></td>
+          <td><%= course.description %></td>
+          <% if !current_user.nil? %>
+            <td><%=link_to "Enroll", course_enroll_path(course, user_id: current_user.id), method: :post %></td>
+          <% end %>
+        </tr>
+      <% end %>
 
-<br>
+    </tbody>
+  </table>
+
+  <br>
 
 
 
-<button type="button" class="btn btn-default"><%= link_to 'New Course', new_course_path %></button>
+  <button type="button" class="btn btn-default"><%= link_to 'New Course', new_course_path %></button>
+
+<% else %>
+  <div class="alert alert-danger">Please <strong>sign in </strong>to view more.</div>
+  <%= render file: 'sessions/new' %>
+<% end %>
