--- a/app/views/instructors/index.html.erb
+++ b/app/views/instructors/index.html.erb
@@ -1,42 +1,46 @@
 <p id="notice"><%= notice %></p>
+<% if !current_user.nil? %>
+  <h1>Instructors</h1>
+  </br>
+  <p class="text-primary"><%= page_entries_info @instructors %> </p>
+  <%= will_paginate @instructors %>
 
-<h1>Instructors</h1>
-
-</br>
-<p class="text-primary"><%= page_entries_info @instructors %> </p>
-<%= will_paginate @instructors %>
-
-<table class = "table table-striped">
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>First</th>
-      <th>Last</th>
-      <th>Email</th>
-      <!-- <th colspan="3"></th> -->
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @instructors.each do |instructor| %>
+  <table class = "table table-striped">
+    <thead>
       <tr>
-        <td><%= instructor.id %></td>
-        <td><%= instructor.first %></td>
-        <td><%= instructor.last %></td>
-        <td><%= instructor.email %></td>
-        <!-- <td><%= link_to 'Show', instructor %></td>
-        <td><%= link_to 'Edit', edit_instructor_path(instructor) %></td>
-        <td><%= link_to 'Destroy', instructor, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
+        <th>ID</th>
+        <th>First</th>
+        <th>Last</th>
+        <th>Email</th>
+        <!-- <th colspan="3"></th> -->
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<%= will_paginate @instructors %> </br>
+    <tbody>
+      <% @instructors.each do |instructor| %>
+        <tr>
+          <td><%= instructor.id %></td>
+          <td><%= instructor.first %></td>
+          <td><%= instructor.last %></td>
+          <td><%= instructor.email %></td>
+          <!-- <td><%= link_to 'Show', instructor %></td>
+          <td><%= link_to 'Edit', edit_instructor_path(instructor) %></td>
+          <td><%= link_to 'Destroy', instructor, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<br>
+  <%= will_paginate @instructors %> </br>
+
+  <br>
 
 
-<button type="button" class="btn btn-default" data-toggle="button" aria-pressed="false" autocomplete="off">
-  <%= link_to 'New Instructor', new_instructor_path %>
-</button>
+  <button type="button" class="btn btn-default" data-toggle="button" aria-pressed="false" autocomplete="off">
+    <%= link_to 'New Instructor', new_instructor_path %>
+  </button>
+
+<% else %>
+  <div class="alert alert-danger">Please <strong>sign in </strong>to view more.</div>
+  <%= render file: 'sessions/new' %>
+<% end %>
