--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,44 +1,48 @@
 <p id="notice"><%= notice %></p>
+<% if !current_user.nil? %>
+  <h1>Subjects</h1>
 
-<h1>Subjects</h1>
+  </br>
+  <div class = "col-md-4">
+    <p class="text-primary"><%= page_entries_info @subjectsub %></p>
+    <%= will_paginate @subjects %>
+  </div>
 
-</br>
-<div class = "col-md-4">
-  <p class="text-primary"><%= page_entries_info @subjectsub %></p>
-  <%= will_paginate @subjects %>
-</div>
-
-<table class = "table">
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>Subject ID</th>
-      <th>Name</th>
-      <th>Abbreviation</th>
-     <!--  <th colspan="3"></th> -->
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @subjects.each do |subject| %>
+  <table class = "table">
+    <thead>
       <tr>
-        <td><%= subject.id %></td>
-        <td><%= subject.num %></td>
-        <td><%= subject.name %></td>
-        <td><%= subject.abbreviation %></td>
-        <!-- <td><%= link_to 'Show', subject %></td>
-        <td><%= link_to 'Edit', edit_subject_path(subject) %></td>
-        <td><%= link_to 'Destroy', subject, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
+        <th>ID</th>
+        <th>Subject ID</th>
+        <th>Name</th>
+        <th>Abbreviation</th>
+       <!--  <th colspan="3"></th> -->
       </tr>
-    <% end %>
-  </tbody>
-</table>
-<%= will_paginate %>
+    </thead>
 
-<br>
+    <tbody>
+      <% @subjects.each do |subject| %>
+        <tr>
+          <td><%= subject.id %></td>
+          <td><%= subject.num %></td>
+          <td><%= subject.name %></td>
+          <td><%= subject.abbreviation %></td>
+          <!-- <td><%= link_to 'Show', subject %></td>
+          <td><%= link_to 'Edit', edit_subject_path(subject) %></td>
+          <td><%= link_to 'Destroy', subject, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <%= will_paginate %>
+
+  <br>
 
 
-<button type="button" class="btn btn-default" data-toggle="button" aria-pressed="false" autocomplete="off">
-  <%= link_to 'New Subject', new_subject_path %>
-</button>
+  <button type="button" class="btn btn-default" data-toggle="button" aria-pressed="false" autocomplete="off">
+    <%= link_to 'New Subject', new_subject_path %>
+  </button>
+<% else %>
+  <div class="alert alert-danger">Please <strong>sign in </strong>to view more.</div>
+  <%= render file: 'sessions/new' %>
+<% end %>
 
