--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,7 +34,7 @@
 			</div>
 		<% else %>
 			<div class="alert alert-danger">Please <strong>sign in </strong>to view more.</div>
-			<center><button type="button" class="btn btn-primary btn-block"><%= link_to "Sign in", login_path %></button></center>
+			<center><%= link_to "Sign in", login_path , :class => "btn btn-primary btn-block"%></center>
 			<center><p class="text-primary">New user? <%= link_to "Sign up now!", signup_path %></p></center>
 		<% end %>
 	</div>
