--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,11 +13,13 @@
       </div>
       <ul class="nav navbar-nav">
         <li class="active"><a href="/">Home</a></li>
-        <li><%= link_to "Instructors", instructors_url %></li>
-        <li><%= link_to "Subjects", subjects_url %></li>
-        <li><%= link_to "Courses", courses_url %></li>
-        <li><%= link_to "Users", users_url %></li>
-        <li><%= link_to "Search", '/search' %></li>
+        <% if !current_user.nil? %>
+          <li><%= link_to "Instructors", instructors_url %></li>
+          <li><%= link_to "Subjects", subjects_url %></li>
+          <li><%= link_to "Courses", courses_url %></li>
+          <li><%= link_to "Users", users_url %></li>
+          <li><%= link_to "Search", '/search' %></li>
+        <% end %>
         <li><%= link_to "Relax", '/relax' %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
